added icons and modification new items

--- a/app/new-items.html
+++ b/app/new-items.html
@@ -242,7 +242,8 @@
             <div class="product-page__content">
               <div class="product-page__filter">
                 <div class="product-page__filter--sort">
-                  <button class="icon-sort-amount-desc"></button> Sort by: New Items <button class="icon-unsorted"></button>
+                  <button class="icon-sort-amount-desc"></button> Sort by: New Items <button
+                    class="icon-unsorted"></button>
                 </div>
                 <div>
                   <button class="icon-th-large active"></button>
@@ -261,9 +262,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -273,6 +278,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -287,9 +296,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -299,6 +312,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -313,9 +330,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -325,6 +346,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -339,9 +364,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -351,6 +380,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -365,9 +398,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -377,6 +414,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -391,9 +432,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -403,6 +448,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -417,9 +466,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -429,6 +482,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -443,9 +500,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -455,6 +516,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -469,9 +534,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -481,6 +550,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -495,9 +568,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -507,6 +584,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -521,9 +602,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -533,6 +618,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
@@ -547,9 +636,13 @@
                       <a href="#" class="product__item-category">
                         Site Template
                       </a>
+                      <div class="product__item-text">
+                        Pimply dummy text of the printing and typesetting industry.
+                      </div>
                     </div>
                     <div class="product__item-price">
                       $19
+                      <span>Sales( 14 )</span>
                     </div>
                   </div>
                   <div class="product__item-info">
@@ -559,6 +652,10 @@
                     </a>
                     <div class="product__item-star">
                       <div class="rate-star"></div>(<span>05</span>)
+                    </div>
+                    <div class="product__item-list">
+                      <a class="icon-comment-o" href="#">(<span>10</span>)</a>
+                      <div class="icon-heart-o">(<span>20</span>)</div>
                     </div>
                   </div>
                 </div>
