--- a/app/about.html
+++ b/app/about.html
@@ -21,7 +21,7 @@
           <div class="container">
             <div class="header__top-inner">
               <div class="header-logo">
-                <a href="#">
+                <a href="index.html">
                   <img src="images/logo.png" alt="Logotype">
                 </a>
               </div>
@@ -171,53 +171,58 @@
               </div>
               <ul class="menu__list">
                 <li>
-                  <a href="#">
+                  <a href="index.html">
                     Home
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="about.html">
                     About
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    WordPress
+                  <a href="contacts.html">
+                    Contacts
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Joomla
+                  <a href="new-items.html">
+                    News-items
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    PSD
+                  <a href="product-one.html">
+                    product
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Plugins
+                  <a href="settings.html">
+                    Settings
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Components
+                  <a href="profile.html">
+                    Profile
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="page.html">
                     Pages
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Contact
+                  <a href="upload.html">
+                    Upload
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Help
+                  <a href="404.html">
+                    404 Page
+                  </a>
+                </li>
+                <li>
+                  <a href="withdrawals.html">
+                    With Drawals
                   </a>
                 </li>
               </ul>
