--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Moderno</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css">
@@ -20,7 +20,7 @@
           <div class="container">
             <div class="header__top-inner">
               <div class="header-logo">
-                <a href="#">
+                <a href="index.html">
                   <img src="images/logo.png" alt="Logotype">
                 </a>
               </div>
@@ -171,53 +171,58 @@
               </div>
               <ul class="menu__list">
                 <li>
-                  <a href="#">
+                  <a href="index.html">
                     Home
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="about.html">
                     About
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    WordPress
+                  <a href="contacts.html">
+                    Contacts
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Joomla
+                  <a href="new-items.html">
+                    News-items
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    PSD
+                  <a href="product-one.html">
+                    product
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Plugins
+                  <a href="settings.html">
+                    Settings
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Components
+                  <a href="profile.html">
+                    Profile
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="page.html">
                     Pages
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Contact
+                  <a href="upload.html">
+                    Upload
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    Help
+                  <a href="404.html">
+                    404 Page
+                  </a>
+                </li>
+                <li>
+                  <a href="withdrawals.html">
+                    With Drawals
                   </a>
                 </li>
               </ul>
